--- a/upload-ai-api/package.json
+++ b/upload-ai-api/package.json
@@ -9,6 +9,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "devDependencies": {
     "@types/node": "^20.8.10",
     "dotenv": "^16.3.1",
@@ -20,8 +23,10 @@
     "@fastify/cors": "^8.4.1",
     "@fastify/multipart": "^8.0.0",
     "@prisma/client": "^5.5.2",
+    "ai": "^2.2.20",
     "fastify": "^4.24.3",
     "openai": "^4.14.2",
+    "pump": "^3.0.0",
     "zod": "^3.22.4"
   }
 }
